m16/manifests/backend-policy-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      app: my-special-installation-mysql
      release: my-special-installation
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          run: ubuntu
