m16/manifests/backend-policy-disallow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: mysqlhelm  
spec:
  podSelector:
    matchLabels:
      app: my-release-mysql
      release: my-release
  ingress: []
